src/objects/Training_Services__c.object
<CustomObject>
    <fields>
        <fullName>Account_Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training &amp; Services</relationshipLabel>
        <relationshipName>Training_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Services_Rep_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Services Rep 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Services_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Services Rep 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Purchase_Date__c</fullName>
        <formula>Asset__r.PurchaseDate</formula>
        <label>Asset Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Safe_ID__c</fullName>
        <formula>Asset__r.Asset_Safe_ID__c</formula>
        <label>Asset Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Training &amp; Services</relationshipLabel>
        <relationshipName>Training_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automation_Coverage__c</fullName>
        <inlineHelpText>How much and what of the customer&apos;s environment did we automate? If there parts of the environment we did not automate, what is the reason?</inlineHelpText>
        <label>Automation Coverage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <formula>IF(NOT(ISBLANK( Asset__c )),&quot;Billable&quot;,&quot;Non-Billable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courseware_Effectiveness__c</fullName>
        <label>Courseware Effectiveness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Deliverables_Training__c</fullName>
        <inlineHelpText>Please list any deliverables resulting from this training session for which the customer is responsible.</inlineHelpText>
        <label>Customer Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Notes__c</fullName>
        <description>Notes field for use by Customer Experience team to capture general, non-training, non-services specific notes.</description>
        <label>Customer Experience Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner__c</fullName>
        <description>This value will be populated by a formula pulling the entry from the Account Record - ccm</description>
        <formula>Account__r.Customer_Experience_Owner3__r.Full_Name__c</formula>
        <label>Customer Experience Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Quotes__c</fullName>
        <label>Customer Quotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Strategy_Training__c</fullName>
        <inlineHelpText>Please describe any insights into what the business strategy of the customer is moving forward. This will help position future customer touchpoints and sales campaigns.</inlineHelpText>
        <label>Customer Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Use_Cases__c</fullName>
        <label>Customer Use Cases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_Likelihood_of_Renewing__c</fullName>
        <label>Customer&apos;s Likelihood of Renewing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Extremely Likely</fullName>
                </value>
                <value>
                    <fullName>4 - Likely</fullName>
                </value>
                <value>
                    <fullName>3 - Can&apos;t Say</fullName>
                </value>
                <value>
                    <fullName>2 - Unlikely</fullName>
                </value>
                <value>
                    <fullName>1 - Extremely Unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Scheduled__c</fullName>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Kickoff__c</fullName>
        <label>Date of Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Re_engage__c</fullName>
        <label>Date to Re-engage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Delivery__c</fullName>
        <formula>IF( AND( NOT( ISBLANK( Asset_Purchase_Date__c )) , NOT( ISBLANK( Delivery_Date__c ))), Delivery_Date__c - Asset_Purchase_Date__c , Delivery_Date__c -  DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Schedule_Alt__c</fullName>
        <formula>IF( NOT( ISBLANK( Date_Scheduled__c ) ), Date_Scheduled__c - DATEVALUE( CreatedDate ), TODAY() - DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Schedule (Alt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Schedule__c</fullName>
        <formula>IF( NOT( ISBLANK( Date_Scheduled__c ) ), Date_Scheduled__c - Date_of_Kickoff__c , TODAY() - Date_of_Kickoff__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_By__c</fullName>
        <label>Delivered By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abbas Syed</fullName>
                </value>
                <value>
                    <fullName>Alec Kemp</fullName>
                </value>
                <value>
                    <fullName>Alexey Stokes</fullName>
                </value>
                <value>
                    <fullName>Artem Artyunov</fullName>
                </value>
                <value>
                    <fullName>Austin Portal</fullName>
                </value>
                <value>
                    <fullName>Ayodele Spencer</fullName>
                </value>
                <value>
                    <fullName>Bill Sanders</fullName>
                </value>
                <value>
                    <fullName>Bosheng Song</fullName>
                </value>
                <value>
                    <fullName>Brandon Combs</fullName>
                </value>
                <value>
                    <fullName>Cameron Baker</fullName>
                </value>
                <value>
                    <fullName>Carlos Castellanos</fullName>
                </value>
                <value>
                    <fullName>Carl Snider</fullName>
                </value>
                <value>
                    <fullName>Chris Despopoulos</fullName>
                </value>
                <value>
                    <fullName>Chris Lowth</fullName>
                </value>
                <value>
                    <fullName>Chris Sawtelle</fullName>
                </value>
                <value>
                    <fullName>Christophe Sperandio</fullName>
                </value>
                <value>
                    <fullName>Cindy Reese</fullName>
                </value>
                <value>
                    <fullName>Danisue Gilpin</fullName>
                </value>
                <value>
                    <fullName>David Fiore</fullName>
                </value>
                <value>
                    <fullName>Divya Singal</fullName>
                </value>
                <value>
                    <fullName>Dmitri Pappa</fullName>
                </value>
                <value>
                    <fullName>Donald Gheen</fullName>
                </value>
                <value>
                    <fullName>Don McKeith</fullName>
                </value>
                <value>
                    <fullName>Dor Juravski</fullName>
                </value>
                <value>
                    <fullName>Geva Assayag</fullName>
                </value>
                <value>
                    <fullName>Greg Pires</fullName>
                </value>
                <value>
                    <fullName>Iddo Avneri</fullName>
                </value>
                <value>
                    <fullName>Jason Shaw</fullName>
                </value>
                <value>
                    <fullName>Jennifer Swannie</fullName>
                </value>
                <value>
                    <fullName>Jet Khargi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivered_by_current_user__c</fullName>
        <description>For use in Training and Services reports to filter on trainings delivered by the currently logged in user</description>
        <formula>Text(Delivered_By__c) = $User.Full_Name__c</formula>
        <label>Delivered by current user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Upsell_Opps_Identified_If_Any__c</fullName>
        <inlineHelpText>Is the customer working on other initiatives? Is there any land-and-expand opportunity? Are there environments that we aren&apos;t connected to? Please include as much detail as possible.</inlineHelpText>
        <label>Describe Upsell Opps Identified</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enhancement_Requests__c</fullName>
        <inlineHelpText>Please list and describe any requests submitted by the customer regarding product enhancements.</inlineHelpText>
        <label>Enhancement Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enthusiasm_for_Our_Products__c</fullName>
        <label>Enthusiasm for Our Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Activities__c</fullName>
        <label>Follow-Up Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Filled_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Filled Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issues_or_Bugs_Identified_If_Any__c</fullName>
        <label>Issues or Bugs Identified (If Any)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Understanding_of_Our_Technology__c</fullName>
        <label>Level of Understanding of Our Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <label>New?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Observations_If_Any__c</fullName>
        <label>Other Observations (If Any)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Projects__c</fullName>
        <label>Other Projects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACE Certification</fullName>
                </value>
                <value>
                    <fullName>ACE Champ</fullName>
                </value>
                <value>
                    <fullName>ACE Pro Development</fullName>
                </value>
                <value>
                    <fullName>Ask ED</fullName>
                </value>
                <value>
                    <fullName>Certification Testing</fullName>
                </value>
                <value>
                    <fullName>Course Prep/Control Modules</fullName>
                </value>
                <value>
                    <fullName>Course Prep/Core</fullName>
                </value>
                <value>
                    <fullName>Green Circle</fullName>
                </value>
                <value>
                    <fullName>Online Learning Development</fullName>
                </value>
                <value>
                    <fullName>Training Follow-Up</fullName>
                </value>
                <value>
                    <fullName>VMTurbo.com/Education Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Training_Experience__c</fullName>
        <label>Overall Training Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Required_for_New_Customers__c</fullName>
        <label>Package Required (for New Customers)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>RSE</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Requests__c</fullName>
        <label>Product Enhancement Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name_from_Asset__c</fullName>
        <formula>IF(ISBLANK(Asset__r.Id),NULL,Asset__r.Product2.Name)</formula>
        <label>Product Name (from Asset)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <formula>Asset__r.Project_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Subreference__c</fullName>
        <label>Project Subreference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_from_Asset__c</fullName>
        <formula>Asset__r.Quantity</formula>
        <label>Quantity (from Asset)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Training_Was_Not_Sold__c</fullName>
        <label>Reason Training Was Not Sold</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <formula>Account__r.AE_Rep__r.Email</formula>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Team__c</fullName>
        <formula>TEXT(Sales_Rep__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Delivered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Delivered ByOLD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Delivery_Date__c</fullName>
        <label>Services Delivery DateOLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Hours__c</fullName>
        <label>Services HoursOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Notes__c</fullName>
        <label>Services NotesOLD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Status__c</fullName>
        <label>Services StatusOLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Dates</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Kickoff</fullName>
                    <default>true</default>
                    <label>Pre-Kickoff</label>
                </value>
                <value>
                    <fullName>Waiting on Dates</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Engagement__c</fullName>
        <label>Student Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Students_in_Attendance_In_Person__c</fullName>
        <label>Attendees with Titles (In Person)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Students_in_Attendance_Remote__c</fullName>
        <label>Attendees with Titles (Remote)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_S_Delivered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a member from the following roles: Sales Engineers, Customer Success, Customer Education, Training</inlineHelpText>
        <label>T&amp;S Delivered By:</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bnAm</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bgDc</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bnAr</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RWzK</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RjXX</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8P</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8U</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E570000028QMJ</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bnAh</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001bCuf</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Services5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_S_Modified_Closed_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Completed&quot;),
IF(OR(Asset__r.of_Services__c &lt;&gt;0,Asset__r.of_Trainings__c&lt;&gt;0, Asset__r.of_TAMs__c&lt;&gt;0),Asset__r.Price/(Asset__r.of_Services__c + Asset__r.of_Trainings__c+ Asset__r.of_TAMs__c),null)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T&amp;S Modified Closed Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_S_Modified_Revenue__c</fullName>
        <description>Asset Price divided by the total number of trainings and services attached to the asset.</description>
        <formula>IF(OR(Asset__r.of_Services__c &lt;&gt;0,Asset__r.of_Trainings__c&lt;&gt;0, Asset__r.of_TAMs__c&lt;&gt;0),Asset__r.Price/(Asset__r.of_Services__c + Asset__r.of_Trainings__c+ Asset__r.of_TAMs__c),null)</formula>
        <label>T&amp;S Modified Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Email__c</fullName>
        <description>Territory Owner&apos;s Email for Training Completed E-mail alert</description>
        <label>Territory Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Thoughtful_Questions__c</fullName>
        <label>Thoughtful Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topics_Covered_Training__c</fullName>
        <inlineHelpText>Please list all topics covered during this training session.</inlineHelpText>
        <label>Topics Covered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Hours__c</fullName>
        <label>Training HoursOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Services_Safe_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training &amp; Services Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training StatusOLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Dates</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>TAM</fullName>
                </value>
                <value>
                    <fullName>ACE Certification</fullName>
                </value>
                <value>
                    <fullName>Other (Training)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Training &amp; Services</label>
    <listViews>
        <fullName>All_Training_and_Services_Records</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Delivered_By__c</columns>
        <columns>Date_Scheduled__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Training and Services Records</label>
    </listViews>
    <listViews>
        <fullName>Waiting_on_Dates_T_S_Records</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Delivered_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Scheduled__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting on Dates</value>
        </filters>
        <label>&apos;Waiting On Dates&apos; T&amp;S Records</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Training &amp; Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training &amp; Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Reason_if_no_Asset</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Asset__c ), ISBLANK( Reason_Training_Was_Not_Sold__c ), $UserRole.Name &lt;&gt; &quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Reason_Training_Was_Not_Sold__c</errorDisplayField>
        <errorMessage>Please fill in reason training was not sold if no asset is involved.</errorMessage>
    </validationRules>
</CustomObject>